# fund_signal

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pylock.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  retention-report.json  uv.lock.bak
app/: config.py  main.py
configs/: normalizer_rules.v1.yaml  resolver_rules.v1.1.yaml  resolver_rules.v1.yaml  verification_rules.v1.yaml
docs/: additional_to_dos.md  dev_workflow.md  fund_signal_overview.md  improve_coding_system.md  misc.md  mvp.md  network_modes.md  task_template.md  verification.md
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
leads/: day1_output.json  exa_seed.json  tavily_confirmed.json  youcom_verified.json
migrations/: env.py
multipart/: __init__.py
output/: email_cron.csv  email_cron.html  email_cron.md  email_debug.csv  email_debug.html  email_debug.md  email_demo.csv  email_demo.html  email_demo.md  subscriptions.json
pipelines/: __init__.py  news_client.py  normalize.py
prove/: prove.config.example.toml
scripts/: __init__.py  backoff.py  seed_scores.py
security/: rotation_state.json
tests/: conftest.py  test_candidate_generator.py  test_capture_utils.py  test_compression.py  test_confidence_scoring.py  test_confidence_scoring_v2.py  test_determinism.py  test_egress_allowlist.py  test_entity_normalization.py  test_exa_discovery.py  test_feedback_determinism.py  test_feedback_resolver.py  test_fixture_loader.py  test_fixture_reader.py  test_freshness_gate.py  test_news_client.py  test_normalize_and_resolve.py  test_online_contract.py  test_promote_latest.py  test_resolver.py  test_resolver_rules.py  test_retention.py  test_secret_rotation.py  test_signup_delivery.py  test_sync_fixtures.py  test_tavily_confirm.py  test_telemetry.py  test_unified_verify.py  test_verify_bundle.py  test_verify_fixtures.py  test_youcom_verify.py  utils.py
tools/: __init__.py  apply_bucket_lifecycle.py  candidate_generator.py  capture_pipeline.py  check_egress.py  compress_raw_data.py  enforce_retention.py  (+14 more)
(+112 files in other folders)
